--- a/index-dev.html
+++ b/index-dev.html
@@ -10,9 +10,8 @@
   <!-- VUETIFY -->
   <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/@mdi/font@4.x/css/materialdesignicons.min.css" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/vuetify@latest/dist/vuetify.min.css" rel="stylesheet">
   <!-- End of vuetify -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css" integrity="sha256-+N4/V/SbAFiW1MPBCXnfnP9QSN3+Keu+NlB+0ev/YKQ=" crossorigin="anonymous" />
 </head>
 <body>
@@ -20,6 +19,6 @@
 
 </body>
 
-  <script src="https://cdn.jsdelivr.net/combine/npm/lodash@4.17.15,npm/vue@2.6.11/dist/vue.js,npm/vuex@3.1.2/dist/vuex.js,npm/vue-router@3.1.3,npm/vuex-persist@2.2.0,npm/vuetify@2.1.15"></script>
+  <script src="https://cdn.jsdelivr.net/combine/npm/lodash@4.17.15,npm/vue@2.6.11/dist/vue.js,npm/vuex@3.1.2/dist/vuex.js,npm/vue-router@3.1.3,npm/vuex-persist@2.2.0,npm/vuetify@latest"></script>
   <script src="js/index.js" type="module"></script>
 </html>
