--- a/index-dev.html
+++ b/index-dev.html
@@ -15,6 +15,6 @@
 
 </body>
 
-  <script src="https://cdn.jsdelivr.net/combine/npm/lodash@4.17.15,npm/vue@2.6.11/dist/vue.js,npm/vuex@3.1.2/dist/vuex.js,npm/vue-router@3.1.3,npm/vuex-persist@2.2.0,npm/vuetify@latest"></script>
+  <script src="https://cdn.jsdelivr.net/combine/npm/lodash@4.17.15,npm/vue@2.6.11/dist/vue.js,npm/vuex@3.1.2/dist/vuex.js,npm/vue-router@3.1.3,npm/vuex-persist@2.2.0,npm/vuetify@latest,npm/vue-markdown@2.2.4/dist/vue-markdown.min.js"></script>
   <script src="js/index.js" type="module"></script>
 </html>
