--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
 
 </body>
 
-  <script src="https://cdn.jsdelivr.net/combine/npm/vue@2,npm/vuex@3,npm/vue-router@3,npm/lodash@4,npm/vuex-persist@2,npm/vuetify@latest"></script>
+  <script src="https://cdn.jsdelivr.net/combine/npm/vue@2,npm/vuex@3,npm/vue-router@3,npm/lodash@4,npm/vuex-persist@2,npm/vuetify@latest,npm/vue-markdown@2.2.4/dist/vue-markdown.min.js"></script>
   <script src="js/index.js" type="module"></script>
 </html>
